Tool Calling 기초
Co-authored-by: Copilot <copilot@github.com>